--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
+    "@angular/animations": "^6.1.8",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
     "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
     "core-js": "^2.5.4",
+    "firebase-tools": "^4.2.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular-devkit/build-angular": "~0.6.0",
-    "typescript": "~2.9.2",
-    "@angular/cli": "~6.2.1",
-    "@angular/language-service": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/cli": "^6.2.3",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/language-service": "^6.1.8",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -47,6 +47,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.9.2"
   }
 }
