--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.9",
     "@angular/router": "^6.1.9",
+    "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
-    "firebase-tools": "^4.2.1",
+    "firebase": "^5.5.3",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.6.8",
-    "@angular/cli": "^6.2.3",
+    "@angular/cli": "^6.2.4",
     "@angular/compiler-cli": "^6.1.9",
     "@angular/language-service": "^6.1.9",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "^2.0.4",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
